--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 
 
     <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <meta
       name="description"
       content="An SPS filtering web app with an online summit register for each SPS peak."
